change app hierarchy

--- a/Pipfile
+++ b/Pipfile
@@ -11,7 +11,7 @@ dj-database-url = "*"
 psycopg2 = "*"
 django-mptt = "*"
 feedparser = "*"
-Django = "*"
-FeinCMS = "*"
-Pillow = "*"
+django = "*"
+feincms = "*"
+pillow = "*"
 pytest-django = "*"
